--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
             <div class="about-grid">
                 <!-- TODO: Member 2 code goes here -->
                 <div class="about-text fade-in-left">
-                    <p>We are a community of passionate developers, designers, and tech enthusiasts. Our mission is to bridge the gap between academic theory and real-world application.</p>
+                    <p>We are a community of passionate developers, designers, and tech enthusiasts. Our mission is to bridge the gap between academic theory and real-world application and to make that process easier.</p>
                     <ul class="stats-list">
-                        <li><strong>50+</strong> Members</li>
+                        <li><strong>60+</strong> Members</li>
+                        <li><strong>45+</strong> lobbies</li>
                         <li><strong>20+</strong> Workshops</li>
                         <li><strong>100%</strong> Passion</li>
                     </ul>
